# IS217.M21-Data-Warehouse-OLAP

./: .gitignore  M1.md  MDX_Query.mdx  README.md  SuperStore_DW.sln  Visualization.ipynb  create_table.py  docker-compose.yml  etl.ipynb  main.py  pyproject.toml  sql_queries.py
SuperStoreDW/Integration Services Project/: Integration Services Project.sln
SuperStoreDW/Integration Services Project/Integration Services Project/: Fact.dtsx  Integration Services Project.database  Integration Services Project.dtproj  Package.dtsx
SuperStore_DW/: Package.dtsx  SuperStore_DW.database  SuperStore_DW.dtproj  fact.dtsx
src/fetch_data/: config.cfg  fetchdata.py
src/notebooks/: goodreads-analysis-and-recommending-books.ipynb
