[tool.poetry]
name = "super-store"
version = "0.1.0"
description = "Data pipeline & Mining Project"
authors = ["Flynn"]

[tool.poetry.dependencies]
python = "^3.9"
pymssql = "^2.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
